--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
     <title>Temperature converter</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <main>
+      <header>
+        <h1>Temperature Converter</h1>
+      </header>
+      <section>
+        <input
+          class="input"
+          type="text"
+          name="celcius"
+          id="celcius"
+          placeholder="celcius"
+        />
+        <input
+          class="input"
+          type="text"
+          name="fahrenheit"
+          id="fahrenheit"
+          placeholder="fahrenheit"
+        />
+        <input
+          class="input"
+          type="text"
+          name="kelvin"
+          id="kelvin"
+          placeholder="kelvin"
+        />
+      </section>
+    </main>
     <script src="./index.js"></script>
   </body>
 </html>
